Checkpoint: Feature All Done ( Exception: Function Calling )

--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,4 @@
-NEXTAUTH_SECRET=<secret_key>
-MONGODB_URI=<mongo_uri>
+NEXTAUTH_SECRET=<next_auth_secret>
+MONGODB_URI=<mongodb_uri>
+NEXT_PUBLIC_API_BASE_URL=<base_url>
+OPENAI_API_KEY=<open_ai_api_key>
